Better support for mkvs with NTSC video track
Fix spaces usage in the audio/subtitles configurations
Fixed black screen with some AVC videos badly flagged at L4.1
Fixed cover art files not always read
Fixed bug with multiple playlist in one folder
OSX: Reopening of the main window after you closed it is now possible, also fixes start as minimized (thanks to grcvoodoorush)
OSX: Unicode files should now be playable (thanks to Thierry Pittet)

v1.10.5

- Fixes:

Regression in FLAC playback
Fixed subtitles font detection on Windows
Flaw in the transcode/remux buffer, in some cases, the video stopped after a few minutes
Cache bug when streaming web medias
Duplicate items issue on Linux
Upnp alive message sent sooner at the start of the server

v1.10

- Changes / Features : Windows/Linux

DTS / DTS-HD core audio tracks are now streamable without reencoding (DVD ISOs not supported yet)
New Option: unification of Mencoder/tsMuxer engines, including:
. Automatic choice between H264 muxing or transcoding, based on AVC Level 4.1 compatibility and subtitles configuration
. Remux on the fly any H264 content from MOV, MP4, and AVI containers (ex: Apple HD Trailers)
. This option is enabled by default and can be disabled via the #Video Settings# virtual menu if anything goes wrong
TS/M2TS support improvement
2 channels downmixing support with PCM conversion

- Changes / Features : All Platforms

XBox 360 unofficial support (Pictures/Music/Videos : WMV8/WMA2 transcoding)
Mencoder archive handling (no seeking support)
Simplified copy (always available, no more option), and much faster with remuxed videos
Alternate subtitles directory
Multi language external subtitles support
Alternate cover art folder and <video>.jpg additional support (along existing <video>.<ext>.cover.jpg)
Automatic album art download from amazon or discogs
Option to display more recents file first in a directory
Ability to generate video thumbnails with Mplayer